dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(aseqview, 0.2.3)
AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_INSTALL
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_C_INLINE

AH_TEMPLATE([HAVE_LIBCAP], [Hey, we have libcap])
AC_CHECK_HEADER(sys/capability.h,
		AC_CHECK_LIB(cap, cap_get_proc,
			     [AC_DEFINE(HAVE_LIBCAP)
			      LIBS="$LIBS -lcap"]))

AM_PATH_ALSA(0.5.0)
AC_CHECK_HEADERS(alsa/asoundlib.h)

AC_ARG_ENABLE(gtk2,
    [  --enable-gtk2     Use gtk+-2.x instead of gtk+-1.x],
    [use_gtk2="$enableval"],[use_gtk2="no"])

if test $use_gtk2 = "yes"; then
  PKG_CHECK_MODULES(ASEQVIEW, gtk+-2.0)
else
  AM_PATH_GTK(1.2.0, , AC_MSG_ERROR(Cannot find GTK: Is gtk-config in path?))
  ASEQVIEW_CFLAGS="$CFLAGS $ALSA_CFLAGS $GTK_CFLAGS"
  ASEQVIEW_LIBS="$LIBS $ALSA_LIBS $GTK_LIBS"
  AC_SUBST(ASEQVIEW_CFLAGS)
  AC_SUBST(ASEQVIEW_LIBS)
fi

AC_OUTPUT(Makefile etc/aseqview.spec)
